--- a/tests/sparkApi.html
+++ b/tests/sparkApi.html
@@ -2,17 +2,14 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Model Tests</title>
+        <title>Spark API Tests</title>
         <link rel="stylesheet" href="lib/qunit-1.14.0.css">
         <script src="lib/qunit-1.14.0.js"></script>
         <script src="lib/sinon-1.9.1.js"></script>
         <script src="../js/lib/jquery.js"></script>
         <script src="../js/lib/underscore-min.js"></script>
-        <script src="../js/lib/backbone-min.js"></script>
-        <script src="../js/lib/backbone-relational.js"></script>
-        <script src="../js/lib/backbone.localStorage.js"></script>
-        <script src="../js/app/models.js"></script>
-        <script src="models.js"></script>
+        <script src="../js/app/sparkApi.js"></script>
+        <script src="sparkApi.js"></script>
     </head>
     <body>
         <div id="qunit"></div>
