--- a/tests/models.html
+++ b/tests/models.html
@@ -11,6 +11,7 @@
         <script src="../js/lib/backbone-min.js"></script>
         <script src="../js/lib/backbone-relational.js"></script>
         <script src="../js/lib/backbone.localStorage.js"></script>
+        <script src="../js/app/sparkApi.js"></script>
         <script src="../js/app/models.js"></script>
         <script src="models.js"></script>
     </head>
