Progress commit, more tests, getting relational models working, working towards getting the devices view to render. Will try to get a page transition from login to devices display working next.

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
 			<h4>&copy; 2014 - jQuery Mobile starter</h4>
 		</div>
 	</div>
-    <!-- Devices -->
-    <div data-role="page" id="devices">
+    <!-- User -->
+    <div data-role="page" id="user">
         <div data-role="header">
             <h1>Devices</h1>
         </div>
         <div data-role="content">
-            <ul id="devices_list"></ul>
+            <ul class="devices"></ul>
         </div>
         <div data-role="footer" data-theme="c">
             <h4>&copy; 2014 - jQuery Mobile starter</h4>
