Refactored views a bit, got user view a bit closer to working.

--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@
 	</div>
     <!-- User -->
     <div data-role="page" id="user">
+        <div class="ui-field-contain">
+            <label for="user_id">ID:</label>
+            <input type="text" name="id" id="user_id" value="">
+        </div>
+        <div class="ui-field-contain">
+            <label for="user_username">Username:</label>
+            <input type="text" name="username" id="user_username" value="">
+        </div>
         <div data-role="header">
             <h1>Devices</h1>
         </div>
