(part 2, these files missed out of the last commit)
1. Refactored view creation into classes
2. Moved all views into dynamically loaded template.html and refactored out common page layout into a separate page template
3. Loading page templates in views tests

--- a/tests/views.html
+++ b/tests/views.html
@@ -13,13 +13,18 @@
     <script src="../js/lib/Backbone.CollectionBinder.min.js"></script>
     <script src="../js/lib/backbone-relational.js"></script>
     <script src="../js/lib/backbone.localStorage.js"></script>
+    <script src="../js/app/utils.js"></script>
     <script src="../js/app/sparkApi.js"></script>
     <script src="../js/app/models.js"></script>
     <script src="../js/app/views.js"></script>
     <script src="views.js"></script>
+    <script src="testBootstrap.js"></script>
 </head>
 <body>
-<div id="qunit"></div>
-<div id="qunit-fixture"></div>
+    <div id="qunit"></div>
+    <div id="qunit-fixture"></div>
+
+    <!-- Template container -->
+    <div id="templates"></div>
 </body>
 </html>
