--- a/index.html
+++ b/index.html
@@ -9,114 +9,6 @@
 	<link rel="stylesheet" href="css/application.css" />
 </head>
 <body>
-    <!-- Login -->
-	<div data-role="page" id="login">
-		<div data-role="header">
-			<h1>Spark Cloud Login</h1>
-		</div>
-		<div data-role="content">
-            <div class="ui-field-contain">
-                <label for="username">Email:</label>
-                <input type="text" name="username" id="username" value="">
-            </div>
-            <div class="ui-field-contain">
-                <label for="password">Password:</label>
-                <input type="password" name="password" id="password" value="">
-            </div>
-            <input type="submit" class="ui-btn" value="Login"/>
-		</div>
-		<div data-role="footer" data-theme="c">
-			<h4>&copy; 2014 - jQuery Mobile starter</h4>
-		</div>
-	</div>
-    <!-- User -->
-    <div data-role="page" id="user">
-        <div class="ui-field-contain">
-            <label for="user_id">ID:</label>
-            <input type="text" name="id" id="user_id" value="">
-        </div>
-        <div class="ui-field-contain">
-            <label for="user_username">Username:</label>
-            <input type="text" name="username" id="user_username" value="">
-        </div>
-        <div data-role="header">
-            <h1>Devices</h1>
-        </div>
-        <div data-role="content">
-            <ul class="devices"></ul>
-        </div>
-        <div data-role="footer" data-theme="c">
-            <h4>&copy; 2014 - jQuery Mobile starter</h4>
-        </div>
-    </div>
-    <!-- Device alerts -->
-    <div data-role="page" id="device_alerts">
-        <div data-role="header">
-            <h1>Device Alerts</h1>
-        </div>
-        <div data-role="content">
-            <!-- Some sort of list? -->
-        </div>
-        <div data-role="footer" data-theme="c">
-            <h4>&copy; 2014 - jQuery Mobile starter</h4>
-        </div>
-    </div>
-    <!-- Alert -->
-    <div data-role="page" id="alert">
-        <div data-role="header">
-            <h1>Alert for <span name="device">device</span></h1>
-        </div>
-
-        <div class="ui-field-contain">
-            <label for="alert_startTime">Start time:</label>
-            <input type="text" name="alert_startTime" id="alert_startTime" value="">
-        </div>
-        <div class="ui-field-contain">
-            <label for="alert_endTime">End time:</label>
-            <input type="text" name="alert_endTime" id="alert_endTime" value="">
-        </div>
-        <div class="ui-field-contain">
-            <label for="alert_interval">Interval (mins):</label>
-            <input type="text" name="alert_interval" id="alert_interval" value="">
-        </div>
-        <div class="ui-field-contain">
-            <!-- TODO: make this a data-driven select -->
-            <label for="alert_variable">Variable:</label>
-            <input type="text" name="alert_variable" id="alert_variable" value="">
-        </div>
-        <div class="ui-field-contain">
-            <label for="alert_value_expression">Value expression:</label>
-            <input type="text" name="alert_value_expression" id="alert_value_expression" value="">
-        </div>
-        <div data-role="footer" data-theme="c">
-            <h4>&copy; 2014 - jQuery Mobile starter</h4>
-        </div>
-    </div>
-
-    <!-- Device Edit Template -->
-    <script type="text/template" id="device-edit-template">
-        <div>
-            <fieldset>
-                <legend>Device</legend>
-                <form>
-                    <div class="ui-field-contain">
-                        <label for="device_id">ID:</label>
-                        <input type="text" name="id" id="device_id" value="">
-                    </div>
-                    <div class="ui-field-contain">
-                        <label for="device_name">Name:</label>
-                        <input type="text" name="name" id="device_name" value="">
-                    </div>
-                    <input type="button" name="save_device" value="Save"/>
-                </form>
-            </fieldset>
-        </div>
-    </script>
-
-    <!-- Device List Template -->
-    <script id="deviceListItemTemplate" type="text/template">
-        <li><a data-name="name" href=""></a></li>
-    </script>
 
     <script>
         var userAgent = navigator.userAgent + '';
@@ -143,6 +35,7 @@
     <script src="js/lib/backbone.localStorage.js"></script>
     <script src="js/lib/pubsub.js"></script>
     <script src="js/app/globals.js"></script>
+    <script src="js/app/utils.js"></script>
     <script src="js/app/models.js"></script>
     <script src="js/app/views.js"></script>
     <script src="js/app/sparkApi.js"></script>
@@ -151,5 +44,7 @@
     <script src="js/app/bootstrap.js"></script>
     <script src="js/lib/jquery.mobile.js"></script>
 
+    <!-- Template container -->
+    <div id="templates"></div>
 </body>
 </html>
