Got device collection binding working

--- a/templates.html
+++ b/templates.html
@@ -90,5 +90,5 @@
 
 <!-- Device List Template -->
 <script id="deviceListItemTemplate" type="text/template">
-    <li><a data-name="name" href=""></a></li>
+    <li><a name="name" href=""></a></li>
 </script>
